--- a/gpio/CMakeLists.txt
+++ b/gpio/CMakeLists.txt
@@ -18,17 +18,17 @@ if(PIGPIO_LIBRARY)
     find_path(PIGIO_INCLUDE_DIR pigpio.h REQUIRED)
     # Add pigpio as public library dependency to the gpio implementation library
     # the header path should not be visible to the clients
-    target_link_libraries(pigpioimpl PUBLIC ${PIGPIO_LIBRARY}  fmt::fmt PRIVATE ${PIGIO_INCLUDE_DIR})
+    target_link_libraries(pigpioimpl PUBLIC ${PIGPIO_LIBRARY}  fmt::fmt)
     
     # setup fmt lib for header only usage
     target_compile_definitions(pigpioimpl PUBLIC FMT_HEADER_ONLY)
 
-    target_include_directories(pigpioimpl PUBLIC  include PRIVATE include_priv)
+    target_include_directories(pigpioimpl PUBLIC  include PRIVATE include_priv ${PIGIO_INCLUDE_DIR})
 
     # link our target binary with our pigpio impl library 
-    target_link_libraries(er_example_cpp  rt pigpioimpl)
+    target_link_libraries(er_example_cpp  PUBLIC rt pigpioimpl)
 else()
     message(STATUS "pigpio library not found, using Mock implementation")
-    target_link_libraries(er_example_cpp  mockgpio)
+    target_link_libraries(er_example_cpp PUBLIC  mockgpio)
 
 endif()
