--- a/.devcontainer/armhf-container/devcontainer.json
+++ b/.devcontainer/armhf-container/devcontainer.json
@@ -34,7 +34,6 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"/opt/vscode/gssdev-latest.vsix",
 				"jeff-hykin.better-cpp-syntax",
 				"ms-python.black-formatter",
 				"ms-vscode.cpptools-extension-pack",
@@ -46,16 +45,14 @@
 				"ms-azuretools.vscode-docker",
 				"eamodio.gitlens",
 				"ms-vsliveshare.vsliveshare",
-				"leathong.openscad-language-support",
 				"ms-python.python",
 				"ms-vscode-remote.vscode-remote-extensionpack",
-				"kelvin.vscode-sshfs",
-				"vscjava.vscode-java-pack",
 				"llvm-vs-code-extensions.vscode-clangd",
 				"GitHub.copilot-chat",
 				"GitHub.copilot",
 				"github.vscode-github-actions",
-				"GitHub.vscode-pull-request-github"
+				"GitHub.vscode-pull-request-github",
+				"EffectiveRangeLLC.erdev"
 			],
 		}
 	},
