--- a/.github/workflows/citest.yml
+++ b/.github/workflows/citest.yml
@@ -23,4 +23,5 @@ on:
 jobs:
  call_ci:
   uses: EffectiveRange/ci-workflows/.github/workflows/cmake-ci.yaml@v1
-  secrets: inherit # pass all secrets
+  secrets:
+    access-token: ${{github.token}}
