fix: inherit secrets in CI workflow configuration

--- a/.github/workflows/citest.yml
+++ b/.github/workflows/citest.yml
@@ -23,5 +23,4 @@ on:
 jobs:
  call_ci:
   uses: EffectiveRange/ci-workflows/.github/workflows/cmake-ci.yaml@v1
-  secrets:
-    access-token: ${{github.token}}
+  secrets: inherit
