refactor: update CI workflow to use cmake-ci.yaml@v4 and add .vscode submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".devcontainer"]
 	path = .devcontainer
 	url = https://github.com/EffectiveRange/devcontainer-defs
+[submodule ".vscode"]
+	path = .vscode
+	url = https://github.com/EffectiveRange/vscode-settings-cpp.git
